# shopping_list

./: .env  .gitignore  Cargo.toml  check.txt  test.json
assets/: init_sw.js  pwa.webmanifest  style.scss  sw.js
assets/img/: .sources.md
assets/js/: init_sw.js  sw.js
assets/language/: de.toml  en.toml
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: item.rs  item_state.rs  lib.rs
data/: create_table.sql  init_db.sh
data/init/: create_table.sql  init_db.sh
db/: ShoppingList.db  create_table.sql  init_db.sh
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss  sw.js
frontend/language/: de.toml  en.toml
frontend/src/: connection_status.rs  lib.rs  main.rs  state.rs
frontend/src/language/: dictionary.rs  error.rs  mod.rs
frontend/src/list/: header.rs  item.rs  mod.rs
src/: app.rs  auth.rs  barcode.rs  camera.rs  connection_status.rs  db.rs  db_tool.rs  default_resource.rs  error.rs  header_bar.rs  image.rs  img_popup.rs  item.rs  item_count.rs  language.rs  lib.rs  list.rs  login.rs  main.rs  main_page.rs  option_signal.rs  popup.rs  server_sync_signal.rs  subsignal.rs  util.rs
src/barcode_scanner/: barcode.rs  error.rs  mod.rs
src/item/: count.rs  data.rs  mod.rs  openfoodsfacts.rs  server_functions.rs  variant_data.rs
src/language/: context.rs  dictionary.rs  mod.rs  selector.rs
src/list/: header.rs  item.rs  list_view.rs  mod.rs
src/list/item/: item_view.rs  mod.rs
src/state/: app_state.rs  cookies.rs  db.rs  item.rs  item_list.rs  item_serialized.rs  list.rs  local_storage.rs  mod.rs
src/state/language/: context.rs  dictionary.rs  mod.rs
src/util/: cookies.rs  from_with_scope.rs  local_storage.rs  mod.rs  signals.rs
src/view/: app.rs  connection_status.rs  head.rs  item.rs  mod.rs  text.rs
src/view/list/: header.rs  item.rs  mod.rs
style/: barcode-scanner.scss  defaults.scss  header-bar.scss  img_popup.scss  list.scss  login.scss  main.scss  popup.scss
