[workspace]
members = [
    "backend",
    "frontend",
    "common",
]
default-members = [ "backend" ] # used for `cargo build`

[workspace.package]
version = "0.1.0"
authors = ["Qwox"]

[workspace.dependencies]
anyhow = "1.0.68"
display_macro = { version = "0.1.0", path = "../../../lib/rust/display_macro" }
serde = { version = "1.0.152", features = ["derive"] }
reqwasm = "0.5.0"
thiserror = "1.0.38"
toml = "0.5.10"
