[workspace]
members = [
    "backend",
    "frontend",
    "common",
]
default-members = [ "backend" ] # used for `cargo build`

[workspace.package]
version = "0.1.0"
authors = ["Qwox"]

[workspace.dependencies]
anyhow = "1.0.68"
display_me = { path = "../display_me" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "js", "v4"] }
reqwasm = "0.5.0"
thiserror = "1.0.38"
toml = "0.5.10"
