[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", features = ["openssl"] }
anyhow.workspace = true
display_macro.workspace = true
openssl = "0.10.45"
reqwasm.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

