[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook = "0.1.7"
leptos = "0.1.0"
uuid = { version = "1.2.2", features = ["serde", "js", "v4"] }
web-sys = { version = "0.3.60", features = ["Navigator"] }
serde.workspace = true
reqwasm.workspace = true
thiserror.workspace = true
display_macro.workspace = true
toml.workspace = true
